--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "homepage": "http://josephcotterell.github.io/React-Portfolio",
+  "homepage": "https://josephcotterell.github.io/React-Portfolio",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "lint": "next lint"
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
     "next": "13.3.0",
     "postcss": "8.4.22",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "tailwindcss": "^3.3.2"
   }
 }
